tests/error/comptime/check_dereference08.bz
consteval global_arr = [10: int32]();

function test()
{
	(consteval {
		*(&global_arr[0] + 10);
	});
}
